// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`xsrf should add xsrf header when using POST/PATCH/POST/PUT 1`] = `
{
  "x-xsrftoken": "uuid|foo.bar",
}
`;

exports[`xsrf should add xsrf header with custom cookie name 1`] = `
[
  "/",
  {
    "headers": {
      "x-xsrftoken": "uuid",
    },
    "method": "POST",
  },
]
`;

exports[`xsrf should add xsrf header with custom header name 1`] = `
[
  "/",
  {
    "headers": {
      "x-xsrf-token": "uuid|foo.bar",
    },
    "method": "POST",
  },
]
`;

exports[`xsrf should not add xsrf header when using GET/HEAD/OPTIONS 1`] = `{}`;

exports[`xsrf should not match cookie 1`] = `
[
  "/",
  {
    "headers": {},
    "method": "POST",
  },
]
`;

exports[`xsrf should work without options 1`] = `
[
  "/",
  {
    "headers": {},
  },
]
`;
